<?xml version="1.0" encoding="utf-8"?><!--
    Copyright 2016 Matthew Stone and Romario Maxwell.

    This file is part of OurVLE.

    OurVLE is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    OurVLE is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with OurVLE.  If not, see <http://www.gnu.org/licenses/>.
    -->

<resources>
    <string name="app_name">OurVLE</string>

    <!-- Strings related to Menu -->

    <string name="action_settings">Settings</string>
    <string name="action_logout">Log out</string>
    <string name="refresh">Refresh</string>
    <string name="search">Search</string>

    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_splash">Splash Screen</string>

    <!-- Strings related to Dialog -->

    <string name="dialog_logout_message">Log out now?</string>
    <string name="cancel">Cancel</string>

    <!-- Strings related to content -->

    <string name="no_events_present">No Events Present</string>
    <string name="no_content_present">No Content Present</string>
    <string name="no_topics_present">No Topics Present</string>
    <string name="not_available">Not Available</string>
    <string name="no_members_present">No Members Present</string>

    <!-- Strings related to messaging -->

    <string name="send">Send</string>
    <string name="enter_message">Enter a message</string>

    <!-- Strings related to log in -->

    <string name="id_number">ID Number</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Can\'t log in?</string>

    <!-- Strings related to Settings -->

    <string name="pref_header_general">General</string>
    <string name="not_implemented">Not implemented</string>
    <string name="tab_title_courses">Courses</string>
    <string name="tab_title_calendar">Calendar</string>
    <string name="tab_title_news">News</string>
    <string name="label_desc">Description</string>
    <string name="label_email">Email</string>
    <string name="notifications_settings">Notifications</string>
    <string name="notifications_general_title">General</string>
    <string name="notifications_show_title">Show notifications</string>
    <string name="notifications_tone_title">Notification tone</string>
    <string name="notifications_vibrate_title">Vibrate</string>
    <string name="notifications_light_title">Notification light</string>

    <string-array name="pref_sync_frequency_entries">
        <item>1 hour</item>
        <item>2 hours</item>
        <item>4 hours</item>
        <item>12 hours</item>
        <item>Daily</item>
    </string-array>

    <string-array name="pref_sync_frequency_values">
        <item>1</item>
        <item>2</item>
        <item>4</item>
        <item>12</item>
        <item>24</item>
    </string-array>
</resources>
