<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.stoneapp.ourvlemoodle2.activities.MainActivity">

    <item
        android:id="@+id/action_refresh"
        android:title="@string/refresh"
        yourapp:showAsAction="never"/>

    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search_24dp"
        yourapp:showAsAction="collapseActionView|ifRoom"
        yourapp:actionViewClass="android.support.v7.widget.SearchView"/>

    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="100"
        yourapp:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="Settings"
        android:orderInCategory="200"
        yourapp:showAsAction="never" />

</menu>